<resources>
    <string name="app_name">Bega</string>
    <!--    <string name="google_browser_key">AIzaSyCPzAyGAQWteRQyymrIPfrK2dfcbR3GR4U</string>-->
    <!--    <string name="google_browser_key">AIzaSyDt-fbJvlUxypFSogMt8PSoVnqPoB_SYiI</string>-->
    <string name="google_direction_api">AIzaSyBTmXV6TlULl2AUSC0Dm9YaZhf1SDdMRL8</string>
    <string name="facebook_app_id">2335117853474777</string>
    <string name="fb_login_protocol_scheme">fb2335117853474777</string>


    <string name="action_settings">Definições</string>
    <string name="bega_logo">bega_logo</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_senha">Senha</string>
    <string name="btn_hint_entrar">Entrar</string>
    <string name="btn_hint_nova_conta">Novo usuário? Registre-se!</string>
    <string name="text_hint_nome">Nome</string>
    <string name="text_hint_telefone">Telefone</string>
    <string name="btn_hint_registrar">Registrar</string>
    <string name="j_tenho_uma_conta">Já tenho uma conta</string>

    <string name="txtMsg">A rede 3G ou WI-FI não possui tranferência de dados.</string>
    <string name="txtMsgErroRede">O dispositivo não está conectado a nenhuma rede 3G ou WI-FI .</string>
    <string name="txtProblemaMsg">Algum problema aconteceu.Relata o problema.</string>
    <string name="txtTimeout">O tempo de comunicação excedeu. Possivelvente a internet está lenta.</string>
    <string name="terminar_sessao">Terminar sessão</string>
    <string name="text_hint_confirm_senha">Confirmar a senha</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="telefone_alternativo">Nº Alternativo</string>
    <string name="nome_de_utilizador">Nome de utilizador</string>
    <string name="provincia">Província</string>
    <string name="municipio">Município</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="numero_da_casa">NºCasa</string>
    <string name="recuperar_a_senha">Esqueci a senha</string>
    <string name="txt_direitos">Copyright © 2019 Pro-IT Consulting</string>
    <string name="txt_wallet_note">*Carteira apenas para maiores de 18 anos.</string>

    <string name="hit_recuperar_senha">Redifinir Senha</string>
    <string name="hit_receber_cod_confirmacao">Como deseja receber o código de confirmação?</string>
    <string name="hit_redif_senha">Insira o seu e-mail para redifinir a sua senha</string>
    <string name="hit_redif_senha_telef">Insira o seu nº de telefone para redifinir a sua senha</string>
    <string name="hit_enviar_telef">Insira o nº de telefone e o endereço para fazer o seu pedido</string>
    <string name="hit_redif_telef">Insira o seu número de telefone</string>
    <string name="hit_redif_cod">Insira o Seu Código de Confirmação</string>
    <string name="hit_pagamento_cod">Que Recebeu por SMS</string>
    <string name="hit_codigo_confirm">Código de Confirmação</string>
    <string name="txtCodigoenviado">O código foi reenviado.</string>
    <string name="hit_receber_denovo">Não Recebeu o código ?</string>
    <string name="txtTentarNovamente">Tentar de Novo</string>
    <string name="hit_btn_enviar_cod">Enviar Código</string>
    <string name="hit_email_enviado">Enviamos o código de confirmação para </string>
    <string name="txtTentarmaistarde">Tentar mais tarde.</string>
    <string name="txtMsgCondConf">Insira o código de confirmação.</string>
    <string name="txtMsgCondConfCod">Termina de inserir o código.</string>
    <string name="hit_nova_senha">Nova Senha</string>
    <string name="hit_conf_senha">Confirmar Senha</string>
    <string name="hit_senha_antiga">Senha Antiga</string>
    <string name="cancelar">Cancelar</string>
    <string name="hit_btn_receber_cod">Receber Código</string>
    <string name="txtTelef_rec">Nº Telefone</string>
    <string name="txtTelef_Email">Email ou Nº Telefone</string>
    <string name="dialogo_escolher_foto_titulo">Escolher Fotografia</string>
    <string name="dialogo_escolher_foto_opc_camera">Câmera</string>
    <string name="dialogo_escolher_foto_opc_galeria">Galeria</string>
    <string name="txtFotoAtualizada">Foto atualizada com sucesso.!.</string>

    <string name="msg_preparing_order">Enviando o seu pedido…</string>
    <string name="msg_order_placed_successfully">O seu pedido foi enviado com sucesso!</string>
    <string name="thank_you">Obrigado!</string>
    <string name="title_preparing_order">Preparando o seu pedido…</string>
    <string name="order_failed">Pedido Cancelado</string>
    <string name="msg_order_placed_failed">O seu pedido não foi enviado.</string>


    <!--    <string name="price_with_currency">Kz%.2f</string>-->
    <string name="price_with_currency">%.2f</string>
    <string name="order_id">Factura #%s</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_checkout">Enviar Pedido</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="cart_info_bar_data">%d Items | Kz%s</string>
    <string name="cart_info_bar_items">%d Items</string>
    <!--    <string name="cart_info_bar_total">Total: Kz%s</string>-->
    <string name="cart_info_bar_total">Total: %.2f</string>
    <string name="timer_info_bar">%s</string>
    <string name="ocorreuErro">Ocorreu um erro de conexão</string>


    <string name="title_activity_produtos">ProdutosActivity</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_favoritos">FavoritosActivity</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_editar_perfil">EditarPerfilActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_pagamento">PagamentoActivity</string>
    <string name="msg_sucesso_senha_alterada">Aceda a sua conta com a nova senha!</string>
    <string name="msg_conta_criada_sucesso">A sua conta foi criada!</string>
    <string name="title_activity_pedidos">PedidosActivity</string>
    <string name="title_activity_configuracoes">ConfiguracoesActivity</string>
    <string name="pref_header_about">Sobre Nós</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_versao">Versão do aplicativo</string>


    <string name="pref_header_privacidade">Conteúdo legal e políticas</string>
    <string name="summary_about">Somos uma equipe de pessoas com idéias semelhantes, especializada no desenvolvimento de aplicativos para Android, iOS e Web, criando novas tendências em todo o espaço do aplicativo. Dispostos em ajudar de qualquer maneira!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Tem alguma dúvida? Estamos felizes em ajudar!</string>
    <string name="title_send_feedback">Enviar comentários</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">Visualizar perguntas frequentes</string>
    <string name="url_faq">http://www.unitel.ao/servlet/web/privacidade</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="url_privacy">http://www.unitel.ao/servlet/web/privacidade</string>
    <string name="title_terms">Termos &amp; Condições</string>
    <string name="url_terms">http://www.unitel.ao/servlet/web/termos_e_condicoes</string>
    <string name="title_version">Versão</string>
    <string name="choose_email_client">Enviar email</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_meu_perfil">key_meu_perfil</string>

    <string name="key_app_version">key_app_version</string>
    <string name="key_alterar_senha">key_alterar_senha</string>
    <string name="key_bega_manual">key_bega_manual</string>
    <string name="alterar_recuperar_senha">Altere sua senha</string>
    <string name="manual_utilizador_dicas">Informações sobre o aplicativo.</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string name="pref_titlte_geral">Informações pessoais</string>


    <string name="pref_title_seguranca">Segurança</string>
    <string name="pref_title_manual_utilizador">Manual de utilizador</string>

    <string name="pesquisar">Pesquisar</string>
    <string name="mudar_vista">Mudar vista</string>
    <string name="meu_perfil_pref">Editar perfil</string>
    <string name="ver_editar_perfil_pref">Actualize seu nome, números de telefone e endereço.</string>
    <string name="carrinho">Carrinho</string>
    <string name="action_favoritos">Favoritos</string>
    <string name="title_activity_moto_boy_tracking">MotoBoyTrackingActivity</string>
    <string-array name="genero">
        <item>Feminino</item>
        <item>Masculino</item>
    </string-array>
    <string-array name="cidade">
        <item>Luanda</item>
        <item>Bengo</item>
        <item>Benguela</item>
        <item>Bié</item>
        <item>Cabinda</item>
        <item>Cuando-Cubango</item>
        <item>Cuanza Norte</item>
        <item>Cuanza Sul</item>
        <item>Cunene</item>
        <item>Huambo</item>
        <item>Huíla</item>
        <item>Lunda Norte</item>
        <item>Lunda Sul</item>
        <item>Malanje</item>
        <item>Moxico</item>
        <item>Namibe</item>
        <item>Uíge</item>
        <item>Zaire</item>
    </string-array>


</resources>
