<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="10dp"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:id="@+id/linearLayoutopc_redif_senha"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:src="@drawable/barra_dialog_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorText"
            android:text="@string/hit_recuperar_senha"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:lines="2"
            android:textColor="@color/black"
            android:text="@string/hit_redif_senha_telef"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_phone_orange_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hint_email">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/dialog_editTelefone_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtTelef_rec"
                    android:inputType="number"
                   android:maxLength="9"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_btn_cancelar_enviar_telefone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:background="@drawable/grey_btn_small_bk"
                android:layout_height="44dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/dialog_btn_telefone_redif_enviar_telefone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/hit_btn_receber_cod"
                android:textColor="@color/white"
                android:background="@drawable/orange_btn_small_bk"
                android:layout_height="44dp"
                 />

        </LinearLayout>

    </LinearLayout>

<!--    <include layout="@layout/activity_sem_internet" />-->

</android.support.v7.widget.CardView>